--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="discription" content="Ismoilxojayev Pizza Practice">
+    <meta name="keywords" content="Ismoilxojayev Uyga vazifa, soat, sarvarxoja, Ismoilxojayev, Najot Ta'lim, Najot Talim, soat vaqti, Imoilxojayev Sarvar, Pizza, Chinaz, Chinoz">
+    <title>Pizza Practice</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
