--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="discription" content="Ismoilxojayev Pizza Practice">
     <meta name="keywords" content="Ismoilxojayev Uyga vazifa, soat, sarvarxoja, Ismoilxojayev, Najot Ta'lim, Najot Talim, soat vaqti, Imoilxojayev Sarvar, Pizza, Chinaz, Chinoz">
-    <title>Pizza Practice</title>
+    <title>Pizza Practice..</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
